--- a/views/marketplace/cart_shopping.hbs
+++ b/views/marketplace/cart_shopping.hbs
@@ -142,7 +142,11 @@
                                     <p class="my-auto">{{price}} Bs</p>
                                 </div>
                                 <div class="col col-2 col-sm-1 my-auto">
+                                {{#if ../order}}
+                                    {{!-- <a href="/marketplace/product/cart_shopping/remove_product/{{id} }" ><i class="fa-solid fa-trash"></i></a> --}}
+                                {{else}}
                                     <a href="/marketplace/product/cart_shopping/remove_product/{{id}}" ><i class="fa-solid fa-trash"></i></a>
+                                {{/if}}
                                 </div>
                             </div>
                             {{/each}}
