--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -159,7 +159,12 @@
 
                     <div class="col col-12 col-lg-9">
                         <div class="container text-start">
-                                
+                            {{#if message}}
+                                <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
+                                    {{message}}
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                            {{/if}}    
                             <div class="row">
                             {{#each products}}
                                 <div class="col col-12 col-md-6 col-xl-4 mb-0 mb-lg-4 mt-5 mt-lg-0">
@@ -167,8 +172,12 @@
                                         <a href="/marketplace/product/{{id}}"><img src="{{img_dir}}" class="card-img-top" alt="..."></a>
                                         <div class="card-body">
                                             <a href="/marketplace/product/{{id}}"><h5 class="card-title">{{name}}</h5></a>
-                                            <p class="card-text">{{price}}</p>
-                                            <a href="#" class="btn btn-primary w-100"><i class="fa-solid fa-cart-plus"></i> <span>Añadir al carrito</span></a>
+                                            <p class="card-text">{{price}} Bs.</p>
+                                            {{!-- post add to cart shopping --}}
+                                            <form action="/marketplace/cart_shopping/add_product/{{id}}" method="post">
+                                                <input type="number" class="form-control d-none" id="inputNumberQuantity" value="1" min="1" max="1" name="quantity">
+                                                <button class="btn btn-primary w-100"><i class="fa-solid fa-cart-plus"></i> <span>Añadir al carrito</span></button>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
