--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -97,8 +97,8 @@
                         <div class="col col-12 col-lg-4">
                         </div>
                         <div class="col col-8 col-lg-4">
-                            <form class="d-flex" role="search">
-                                <input class="form-control me-2 " type="search" placeholder="Buscar" aria-label="Search">
+                            <form action="/marketplace/search/" class="d-flex" role="search" method="get">
+                                <input class="form-control me-2 " type="search" placeholder="Buscar" aria-label="Search" name="search">
                                 <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         
                             </form>
