changing the new status icon for orders page

--- a/views/admin/products/orders.hbs
+++ b/views/admin/products/orders.hbs
@@ -227,7 +227,7 @@
                                     <td><span class="badge bg-primary">Completado <i class="fa-solid fa-check"></i></span></td>
                                 {{/if}}
                                 {{#if new}}
-                                    <td><span class="badge bg-success" style="--bs-bg-opacity: .7;">Nuevo <i class="fa-solid fa-check"></i></span></td>
+                                    <td><span class="badge bg-success" style="--bs-bg-opacity: .7;">Nuevo <i class="fa-solid fa-asterisk"></i></span></td>
                                 {{/if}}
                                 {{#if ready-to-pay}}
                                     <td><span class="badge bg-warning">Por Pagar <i class="fa-regular fa-clock"></i></span></td>
