adding order number of products and some corrections

--- a/views/admin/products/order_details.hbs
+++ b/views/admin/products/order_details.hbs
@@ -111,7 +111,6 @@
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Detalles de la Orden</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
-                        <a class="btn btn-success" href="/links/add">Añadir Producto <i class="fa-solid fa-plus"></i></a>
                     </div>
                 </div>
                 
@@ -157,7 +156,7 @@
                                     <tr class="">
                                         <td class="order align-middle white-space-nowrap">23</td>
                                         <td class="align-middle white-space-nowrap ps-8">
-                                            <a class=" align-items-center" href="#">
+                                            <a class=" align-items-center" href="/admin/edit_product/{{id}}">
                                                 <h6 class="mb-0 text-900">{{name}}</h6>
                                             </a>
                                         </td>
