--- a/views/admin/products/order_details.hbs
+++ b/views/admin/products/order_details.hbs
@@ -253,7 +253,7 @@
                                     <h4>Estado del Pedido</h4>
                                 </div>
                                 <div class="card-body">
-                                    <form action="/links/add" method="POST">
+                                    <form action="/admin/orders/details/{{order.id}}/status" method="POST">
                                         <div class="form-group pb-3">
                                             <label class="" for="">Pedido realizado hace :</label>
                                             <h4>{{order.fecha_de_pedido}}</h4>
@@ -285,7 +285,7 @@
                                         <div class="form-group pb-3">
                                             
                                             <label class="" for="">Actualizar Estado :</label>
-                                            <select class="form-select" aria-label="Default select example">
+                                            <select class="form-select" name="status" aria-label="Default select example">
                                                 <option class="text-bg-success" style="--bs-bg-opacity: .7;" value="new" selected>Nuevo</option>
                                                 <option class="text-bg-success" value="confirmed">Completado</option>
                                                 <option class="text-bg-warning" value="ready-to-pay">Por Pagar</option>
@@ -295,7 +295,7 @@
                                         
                                         <div class="form-group pb-3">
                                             <div class="btn-group w-100" role="group" aria-label="Basic mixed styles example">
-                                                <a class="btn btn-secondary">Cancelar</a>
+                                                <a class="btn btn-secondary" href="/admin/orders">Cancelar</a>
                                                 <button type="submit" class="btn btn-success">Confirmar</button>
                                             </div>
                                         </div>
