--- a/views/admin/products/order_details.hbs
+++ b/views/admin/products/order_details.hbs
@@ -19,12 +19,12 @@
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="../css/styles_dashboard.css">
+    <link rel="stylesheet" href="/css/styles_dashboard.css">
 </head>
 <body>
     
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Tienda Virtual OVA</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/admin/home">Tienda Virtual OVA</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,68 +37,75 @@
                 <div class="position-sticky pt-3 sidebar-sticky">
                     <ul class="nav nav-pills flex-column mb-auto">
                         <li class="nav-item">
-                            <a href="./dashboard.html" class="nav-link link-dark" aria-current="page">
+                            <a href="/admin/home" class="nav-link link-dark" aria-current="page">
                                 <i class="fa-solid fa-house"></i>
                                 Home
                             </a>
                         </li>
                         <li>
-                            <a href="./orders.html" class="nav-link link-dark">
+                            <a href="/admin/orders" class="nav-link active">
                                 <i class="fa-regular fa-note-sticky"></i>
                                 Ordenes
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link active">
+                            <a href="/admin/products" class="nav-link link-dark">
                                 <i class="fa-solid fa-cart-shopping"></i>
                                 Productos
                             </a>
                         </li>
                         <li>
-                            <a href="./clients.html" class="nav-link link-dark">
-                                <i class="fa-solid fa-user-group"></i>
+                            <a href="/admin/categories" class="nav-link link-dark">
+                                <i class="fa-solid fa-tag"></i>
+                                Categorias
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/admin/clients" class="nav-link link-dark">
+                                <i class="fa-solid fa-users"></i>
                                 Clientes
                             </a>
                         </li>
                         <li>
-                            <a href="./salesperson.html" class="nav-link link-dark">
+                            <a href="/admin/salesperson" class="nav-link link-dark">
                                 <span class="me-2">
-                                    <i class="fa-regular fa-id-badge"></i>
+                                    <i class="fa-regular fa-id-badge"></i> 
                                 </span>
                                 Vendedores
                             </a>
                         </li>
                         <li>
-                            <a href="./reports.html" class="nav-link link-dark">
-                                <span class="me-0">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                        class="feather feather-bar-chart-2 align-text-bottom" aria-hidden="true">
-                                        <line x1="18" y1="20" x2="18" y2="10"></line>
-                                        <line x1="12" y1="20" x2="12" y2="4"></line>
-                                        <line x1="6" y1="20" x2="6" y2="14"></line>
-                                    </svg>
-                                </span>
+                            <a href="/admin/reports" class="nav-link link-dark">
+                            <span class="me-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-bar-chart-2 align-text-bottom" aria-hidden="true">
+                                    <line x1="18" y1="20" x2="18" y2="10"></line>
+                                    <line x1="12" y1="20" x2="12" y2="4"></line>
+                                    <line x1="6" y1="20" x2="6" y2="14"></line>
+                                </svg>
+                            </span>
                                 Reportes
                             </a>
                         </li>
                     </ul>
 
+                    <div class="py-3" height="20px"></div>
                     <hr class="">
                     <div class="dropdown px-3" bis_skin_checked="1">
                         <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-                            <strong>User1</strong>
+                            <strong>{{admin.first_name}}</strong>
                         </a>
                         <ul class="dropdown-menu text-small shadow">
-                            <li><a class="dropdown-item" href="#">New project...</a></li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><a class="dropdown-item" href="/admin/add_employee">Crear Nuevo Usuario</a></li>
+                            <li><a class="dropdown-item" href="/admin/settings">Ajustes</a></li>
+                            <li><a class="dropdown-item" href="/admin/edit_employee/{{admin.id}}">Perfil</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Sign out</a></li>
+                            <li><a class="dropdown-item" href="/admin/logout">Cerrar Sesión</a></li>
                         </ul>
                     </div>
 
@@ -123,8 +130,8 @@
                             <table class="table table-hover table-bordered">
                                 <thead>
                                     <tr>
-                                        <th>ID</th>
-                                        <th>Nombre</th>
+                                        <th>Imagen</th>
+                                        <th>Producto</th>
                                         <th>Precio</th>
                                         <th>Cantidad</th>
                                         <th>Total</th>
@@ -154,7 +161,7 @@
                                     </tr> --}}
                                     {{#each ordered_products}}
                                     <tr class="">
-                                        <td class="order align-middle white-space-nowrap">23</td>
+                                        <td class="order align-middle white-space-nowrap"><img src="{{img_dir}}" alt="img" width="50" ></td>
                                         <td class="align-middle white-space-nowrap ps-8">
                                             <a class=" align-items-center" href="/admin/edit_product/{{id}}">
                                                 <h6 class="mb-0 text-900">{{name}}</h6>
@@ -265,17 +272,16 @@
                                             {{#with order}}
                                             {{#if completed}}
                                                 <span class="badge rounded-pill text-bg-success fs-6">Completado <i class="fa-solid fa-check"></i></span>
-                                                {{!-- <td><span class="badge bg-primary">Completado <i class="fa-solid fa-check"></i></span></td> --}}
                                             {{/if}}
                                             {{#if new}}
                                             <span class="badge rounded-pill text-bg-success fs-6"  style="--bs-bg-opacity: .7;">Nuevo <i class="fa-solid fa-asterisk"></i></span>
                                                 {{!-- <td><span class="badge bg-success" style="--bs-bg-opacity: .7;">Nuevo <i class="fa-solid fa-asterisk"></i></span></td> --}}
                                             {{/if}}
-                                            {{#if ready-to-pay}}
+                                            {{#if ready_to_pay}}
                                             <span class="badge rounded-pill text-bg-warning fs-6" >Por Pagar <i class="fa-regular fa-clock"></i></span>
                                                 {{!-- <td><span class="badge bg-warning">Por Pagar <i class="fa-regular fa-clock"></i></span></td> --}}
                                             {{/if}}
-                                            {{#if cancelled}}
+                                            {{#if canceled}}
                                             <span class="badge rounded-pill text-bg-danger fs-6" >Cancelado <i class="fa-solid fa-xmark"></i></span>
                                                 {{!-- <td><span class="badge bg-danger">Cancelled <i class="fa-solid fa-xmark"></i></span></td> --}}
                                             {{/if}}
@@ -287,9 +293,9 @@
                                             <label class="" for="">Actualizar Estado :</label>
                                             <select class="form-select" name="status" aria-label="Default select example">
                                                 <option class="text-bg-success" style="--bs-bg-opacity: .7;" value="new" selected>Nuevo</option>
-                                                <option class="text-bg-success" value="confirmed">Completado</option>
+                                                <option class="text-bg-success" value="completed">Completado</option>
                                                 <option class="text-bg-warning" value="ready-to-pay">Por Pagar</option>
-                                                <option class="text-bg-danger" value="cancelled">Cancelado</option>
+                                                <option class="text-bg-danger" value="canceled">Cancelado</option>
                                             </select>
                                         </div>
                                         
