displaying micro images instead of the normal imges to reduce the load time in orders pages and related

--- a/views/admin/products/order_details.hbs
+++ b/views/admin/products/order_details.hbs
@@ -160,11 +160,11 @@
                                         <td class="date align-middle white-space-nowrap text-700 "><span class="h3">45</span> unidades</td>
                                     </tr> --}}
                                     {{#each ordered_products}}
-                                    <tr class="">
-                                        <td class="order align-middle white-space-nowrap"><img src="{{img_dir}}" alt="img" width="50" ></td>
+                                    <tr class="h4">
+                                        <td class="order align-middle white-space-nowrap"><img src="{{img_dir}}" alt="img" width="100" ></td>
                                         <td class="align-middle white-space-nowrap ps-8">
                                             <a class=" align-items-center" href="/admin/edit_product/{{id}}">
-                                                <h6 class="mb-0 text-900">{{name}}</h6>
+                                                <p class="mb-0 text-900">{{name}}</p>
                                             </a>
                                         </td>
                                         <td class="total align-middle fw-semi-bold text-1000">{{price}} Bs.</td>
