--- a/views/admin/products/orders.hbs
+++ b/views/admin/products/orders.hbs
@@ -7,8 +7,7 @@
     <title>OVA admins</title>
 
     <!-- boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +24,7 @@
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/admin/home">Tienda Virtual OVA</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+            data-bs-target="#sidebarMenu" aria-con  trols="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
     </header>
@@ -139,17 +138,19 @@
 
                 <!-- table contents dashboard -->
                 <h2>Ordenes Recientes</h2>
-
+                {{#with filters}}
                 <ul class="nav nav-links mb-3 mb-lg-2 mx-n3">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Todos <span
-                                class="text-700 text-black">(68817)</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Por Pagar <span class="text-700 text-black">(6)</span></a>
+                    <li class="nav-item"><a href="/admin/orders/filter/all" class="nav-link active" aria-current="page" href="#">Todos <span
+                                class="text-700 text-black">({{all}})</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/admin/orders/filter/new">Nuevos <span class="text-700 text-black">({{new}})</span></a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Completado <span class="text-700 text-black">(6,810)</span></a>
+                    <li class="nav-item"><a class="nav-link" href="/admin/orders/filter/ready-to-pay">Por Pagar <span class="text-700 text-black">({{ready_to_pay}})</span></a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Fállido <span class="text-700 text-black">(2)</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/admin/orders/filter/completed">Completado <span class="text-700 text-black">({{completed}})</span></a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="/admin/orders/filter/canceled">Fállido <span class="text-700 text-black">({{canceled}})</span></a></li>
                 </ul>
-
+                {{/with}}
                 <!-- <div class="card mt-2" bis_skin_checked="1">
                 
                     <div id="datatables-dashboard-projects_wrapper" class=" no-footer" bis_skin_checked="1">
