--- a/views/admin/a_home.hbs
+++ b/views/admin/a_home.hbs
@@ -115,21 +115,28 @@
             <!-- dashboard -->
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-5">
-                <div
-                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Dashboard</h1>
-                    <div class="btn-toolbar mb-2 mb-md-0">
-                        <div class="btn-group me-2">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+                <div class="container-fluid px-0">
+                    <div
+                        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                        <h1 class="h2">Dashboard</h1>
+                        <div class="btn-toolbar mb-2 mb-md-0">
+                            <div class="btn-group me-2">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+                            </div>
+                            <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+                                <span data-feather="calendar" class="align-text-bottom"></span>
+                                This week
+                            </button>
                         </div>
-                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                            <span data-feather="calendar" class="align-text-bottom"></span>
-                            This week
-                        </button>
                     </div>
+                    {{#if message}}
+                        <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
+                            {{message}}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {{/if}}
                 </div>
-
 
                 <h2>Ventas</h2>
 
@@ -210,12 +217,9 @@
                     
                     <div id="datatables-dashboard-projects_wrapper" class="dataTables_wrapper dt-bootstrap5 no-footer"
                         bis_skin_checked="1">
-                        <div class="row" bis_skin_checked="1">
-                            <div class="col-sm-12 col-md-6" bis_skin_checked="1"></div>
-                            <div class="col-sm-12 col-md-6" bis_skin_checked="1"></div>
-                        </div>
                         <div class="row dt-row" bis_skin_checked="1">
                             <div class="col-sm-12" bis_skin_checked="1">
+                                {{#if orders}}
                                 <table id="datatables-dashboard-projects" class="table table-striped my-0 dataTable no-footer"
                                     aria-describedby="datatables-dashboard-projects_info">
                                     <thead>
@@ -237,18 +241,31 @@
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        {{#each orders}}
                                         <tr class="even">
-                                            <td class="order align-middle white-space-nowrap"><a class="fw-semi-bold" href="#!">#2448</a>
-                                            <td class="total align-middle fw-semi-bold text-1000">$9562</td>
+                                            <td class="order align-middle white-space-nowrap h5"><a class="fw-semi-bold" href="/admin/orders/details/{{id}}">#{{id}}</a>
+                                            <td class="total align-middle fw-semi-bold text-1000 h6">Bs. {{total_amount}}</td>
                                             <td class="align-middle white-space-nowrap ps-8">
-                                                <a class=" align-items-center" href="#">
-                                                    <h6 class="mb-0 text-900">Igor Borvibson</h6>
+                                                <a class=" align-items-center" href="/admin/edit_client/{{client_id}}">
+                                                    <h6 class="mb-0 text-900">{{client_name}}</h6>
                                                 </a>
                                             </td>
-                                            <td><span class="badge bg-success">Confirmado <i class="fa-solid fa-check"></i></span></td>
-                                            <td class="date align-middle white-space-nowrap text-700 fs--1 ">Nov 24, 10:16 AM</td>
+                                            {{#if completed}}
+                                                <td><span class="badge bg-success">Completado <i class="fa-solid fa-check"></i></span></td>
+                                            {{/if}}
+                                            {{#if new}}
+                                                <td><span class="badge bg-success" style="--bs-bg-opacity: .7;">Nuevo <i class="fa-solid fa-asterisk"></i></span></td>
+                                            {{/if}}
+                                            {{#if ready_to_pay}}
+                                                <td><span class="badge bg-warning">Por Pagar <i class="fa-regular fa-clock"></i></span></td>
+                                            {{/if}}
+                                            {{#if canceled}}
+                                                <td><span class="badge bg-danger">Cancelled <i class="fa-solid fa-xmark"></i></span></td>
+                                            {{/if}}
+                                            <td class="date align-middle white-space-nowrap text-700 fs--1 ">{{fecha_de_pedido}}</td>
                                         </tr>
-                                        <tr class="even">
+                                        {{/each}}
+                                        {{!-- <tr class="even">
                                             <td class="sorting_1">Project Fireball</td>
                                             <td class="d-none d-xl-table-cell">01/01/2022</td>
                                             <td class="d-none d-xl-table-cell">31/06/2022</td>
@@ -261,9 +278,17 @@
                                             <td class="d-none d-xl-table-cell">31/06/2022</td>
                                             <td><span class="badge bg-warning">Por Pagar <i class="fa-regular fa-clock"></i></span></td>
                                             <td class="d-none d-md-table-cell">Carl Jenkins</td>
-                                        </tr>
+                                        </tr> --}}
                                     </tbody>
                                 </table>
+                                {{else}}
+                                    <div class="col-md-8 mx-auto text-center py-5">
+                                        <div class="card card-body">
+                                            <h2>No hay ningún pedido</h2>
+                                            <a href="/admin/add_product"><h3>Añadir Un nuevo Producto</h3></a>
+                                        </div>
+                                    </div>
+                                {{/if}}
                             </div>
                         </div>
                         
