--- a/views/admin/a_home.hbs
+++ b/views/admin/a_home.hbs
@@ -7,8 +7,7 @@
     <title>Solo vendedores</title>
 
     <!-- boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -146,24 +145,26 @@
                     <div class="row h-100">
                         <div class="col-12 col-md-4">
                             <!-- Card -->
-                            <div class="card border-0 h-100 shadow card-n-orders">
-                                <div class="card-header border-0 card-header-space-between pt-3">
-                                    <!-- Title -->
-                                    <h2 class="card-header-title h3 card-n-orders-title"> Ordenes Nuevas </h2>
-                                    <p class="h6 ps-3 card-n-orders-sub">Esperando Procesamiento</p>
+                            <a href="/admin/orders/filter/new" class="link-underline-opacity-0 " style="text-decoration: inherit">
+                                <div class="card border-0 h-100 shadow card-n-orders">
+                                    <div class="card-header border-0 card-header-space-between pt-3">
+                                        <!-- Title -->
+                                        <h2 class="card-header-title h3 card-n-orders-title"> Ordenes Nuevas </h2>
+                                        <p class="h6 ps-3 card-n-orders-sub">Esperando Procesamiento</p>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row h-100 justify-content-between">
+                                            <div class="col-9 d-flex flex-column text-center">
+                                                <!-- Subtitle -->
+                                                <h2 class="mb-0 mt-auto display-5 pb-2">{{new}} ordenes</h2>
+                                                <!-- Comment -->
+                                                
+                                            </div>
+                        
+                                        </div> <!-- / .row -->
+                                    </div>
                                 </div>
-                                <div class="card-body">
-                                    <div class="row h-100 justify-content-between">
-                                        <div class="col-9 d-flex flex-column text-center">
-                                            <!-- Subtitle -->
-                                            <h2 class="mb-0 mt-auto display-5 pb-2">{{new}} ordenes</h2>
-                                            <!-- Comment -->
-                                            
-                                        </div>
-                    
-                                    </div> <!-- / .row -->
-                                </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-12 col-md-4">
                             <!-- Card -->
