adding filtering links to products page html only

--- a/views/admin/products/orders.hbs
+++ b/views/admin/products/orders.hbs
@@ -142,7 +142,7 @@
                 {{!-- filters --}}
                 {{#with filters}}
                 <ul class="nav nav-links mb-3 mb-lg-2 mx-n3">
-                    <li class="nav-item"><a href="/admin/orders/filter/all" class="nav-link active" aria-current="page" href="#">Todos <span
+                    <li class="nav-item"><a href="/admin/orders/filter/all" class="nav-link active" aria-current="page">Todos <span
                                 class="text-700 text-black">({{all}})</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/admin/orders/filter/new">Nuevos <span class="text-700 text-black">({{new}})</span></a>
                     </li>
