--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -131,6 +131,20 @@
                 </div>
 
                 <h2>Productos Registrados</h2>
+
+                {{!-- filters --}}
+                {{#with filters}}
+                <ul class="nav nav-links mb-3 mb-lg-2 mx-n3">
+                    <li class="nav-item"><a href="/admin/orders/filter/all" class="nav-link active" aria-current="page">Todos <span
+                                class="text-700 text-black">({{all}})</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/admin/orders/filter/new">Existentes <span class="text-700 text-black">({{published}})</span></a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="/admin/orders/filter/ready-to-pay">Agotados <span class="text-700 text-black">({{out_of_stock}})</span></a>
+                    </li>
+                    
+                </ul>
+                {{/with}}
+
                 <div class="table-sm-responsive mt-4">
                 {{#if products}}
                     <table class="table table-hover table-bordered">
