card aligning bug  fixed

--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -179,6 +179,9 @@
                                             {{!-- display according to stock --}}
                                             {{#if little_stock}}
                                             <p class="text-warning"><i class="fa-solid fa-triangle-exclamation"></i> Pocas existencias</p>
+                                            {{else}}
+                                            {{!-- { {#if stock} }<p>&nbsp</p>{ {/if} } --}}
+                                            {{#if stock}}hr{{/if}}
                                             {{/if}}
                                             {{#unless stock}}
                                             <p class="text-danger"><i class="fa-solid fa-ban"></i> No hay existencias</p>
