--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -135,7 +135,7 @@
                 {{!-- filters --}}
                 {{#with filters}}
                 <ul class="nav nav-links mb-3 mb-lg-2 mx-n3">
-                    <li class="nav-item"><a href="/admin/orders/filter/all" class="nav-link active" aria-current="page">Todos <span
+                    <li class="nav-item"><a href="/admin/products/all" class="nav-link active" aria-current="page">Todos <span
                                 class="text-700 text-black">({{all}})</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/admin/products/published">Existentes <span class="text-700 text-black">({{published}})</span></a>
                     </li>
